--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
     		<artifactId>aws-java-sdk-dynamodb</artifactId>
     		<version>1.12.468</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.amazonaws</groupId>
+    		<artifactId>aws-java-sdk-sqs</artifactId>
+    		<version>1.12.651</version>
+		</dependency>
 	</dependencies>
 
 	<build>
